added top level .html files to .gitignore
and edited a note in cycling_route_analysis_brouter.Rmd

--- a/cycling_route_analysis_brouter.Rmd
+++ b/cycling_route_analysis_brouter.Rmd
@@ -155,7 +155,7 @@ routes <- bind_rows(routes)
 ```
 
 Notes:
-- _osrmRoute_ is the primary function used above.
+- this queries the brouter server to get routes
 
 
 ## Combine routes with Bike LTS
