--- a/cycling_route_analysis_brouter.Rmd
+++ b/cycling_route_analysis_brouter.Rmd
@@ -178,17 +178,51 @@ Notes: for each segment in bike_lts, this counts how many student's calculated r
 
 ```{r routeslts, eval = FALSE, echo = TRUE, results = "show", warning = FALSE, error = TRUE, message = FALSE}
 getLTSForRoute <- function(i) {
-  lts_segments <- (bike_lts_buffer %>% filter(student_use > 0))$OBJECTID[st_intersects(bike_lts_buffer %>% filter(student_use > 0), routes %>% filter(student_number == i), sparse = FALSE)]
-  lts_max <- max(bike_lts_buffer %>% filter(OBJECTID %in% lts_segments) %>% pull(LTS_F), na.rm = TRUE)
-  lts_average <- mean(bike_lts_buffer %>% filter(OBJECTID %in% lts_segments) %>% pull(LTS_F), na.rm = TRUE)
-#  routes_lts[[as.character(i)]] <- data.frame("student_number" = c(as.character(i)), "lts_max" = c(lts_max), "lts_average" = c(lts_average))
-  return(data.frame("student_number" = i, "lts_max" = lts_max, "lts_average" = lts_average))
-  message(paste0("done - ", i, " of ", max(addresses_near$number)))
+
+  # Filter the routes for the current student number
+  current_route <- routes %>% filter(student_number == i)
+
+  # Find intersecting OBJECTIDs
+  intersecting_ids <- relevant_buffer$OBJECTID[lengths(st_intersects(relevant_buffer, current_route)) > 0]
+
+  # Filter relevant segments to calculate max and average lts
+  relevant_segments <- bike_lts_buffer %>% filter(OBJECTID %in% intersecting_ids)
+  
+  # find all the segments of relevant_buffer that the current route passes through
+  current_route_lts_intersection <- st_intersection(current_route, relevant_segments)
+  
+  # calculate segment length in meters
+  current_route_lts_intersection$"segment_length" <- as.double(st_length(current_route_lts_intersection))
+  
+  # Return the result as a data frame
+  result <- data.frame(
+    student_number = i
+    , lts_max = max(current_route_lts_intersection$LTS_F)
+    , lts_average = weighted.mean(current_route_lts_intersection$LTS_F, current_route_lts_intersection$segment_length)
+    , lts_1_dist = sum(current_route_lts_intersection %>% filter(LTS_F == 1) %>% pull(LTS_F))
+    , lts_2_dist = sum(current_route_lts_intersection %>% filter(LTS_F == 2) %>% pull(LTS_F))
+    , lts_3_dist = sum(current_route_lts_intersection %>% filter(LTS_F == 3) %>% pull(LTS_F))
+    , lts_4_dist = sum(current_route_lts_intersection %>% filter(LTS_F == 4) %>% pull(LTS_F))
+    , route = as.data.frame(current_route_lts_intersection)
+  )
+  
+  # Optional message for debugging/progress
+  message(paste0("done - ", i))
+  
+  return(result)
 }
 
+# Start with routes_lts as a NULL list
 routes_lts <- list(NULL)
-# routes_lts <- lapply(head(addresses_near %>% arrange(number) %>% pull(number)),
-#        getLTSForRoute)
+
+# Pre-filter the bike_lts_buffer for relevant student use
+relevant_buffer <- bike_lts_buffer %>% filter(student_use > 0)
+  
+routes_lts <- lapply(head(addresses_near %>% arrange(number) %>% pull(number)),
+      getLTSForRoute)
+
+system.time(routes_lts <- lapply(head(addresses_near %>% arrange(number) %>% pull(number)),
+      getLTSForRoute))
 
 routes_lts <- mclapply(addresses_near %>% arrange(number) %>% pull(number),
                        getLTSForRoute,
@@ -206,6 +240,8 @@ routes_lts <- mclapply(addresses_near %>% arrange(number) %>% pull(number),
 # }
 
 routes_lts <- bind_rows(routes_lts)
+
+ggmap(basemap) + geom_sf(data = routes_lts, inherit.aes = FALSE, aes(color = route.lts, geometry = routes_lts$route.geometry))
 
 addresses_near <- left_join(addresses_near, routes_lts, join_by("number"=="student_number"))
 ```
